--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
     <head lang="en">
-
         <title>Crear comité</title>
     <th:block th:include="../templates/header"></th:block>
-
 </head>
 <body>
-    <script> Textheader('pnt_crco',document.title);</script>
-
+    <script> Textheader('pnt_crco', document.title);</script>
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
@@ -18,118 +14,105 @@
             <br>
             <div class="row text-center">
                 <img src="../../static/image/roles.png" width="75" th:src="@{/image/roles.png}"/>
-                <!--<h3 align="center" >Crear Comite</h3>-->
-                <div>
-                    <br>
+                <div><br>
                     <div class="col-md-12">
-                    <form class="form-horizontal" onsubmit="return validateForm()" th:object="${comite}" th:action="@{../comite}" method="post">
-                                  <input type="hidden" th:field="*{codigocomite}"/>
-                        <!--  <input type="hidden" th:field="*{nombrecomite}"/>-->
-                      
-                       
-                        <div class="form-group">
-                            <label class="col-sm-4 control-label">Nombre del comité(*):</label>
-                            <div class="col-sm-5">
-                                <input type="text" class="form-control" size="30" maxlength="30" required="true"  th:field="*{nombrecomite}"/>
-                            </div>
-                            <div class="popup col-sm-1"><b>
-                                    <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('nombre')" onmouseout ="javascript:ocultarAyuda('nombre')">a</a></b>
-
-                                <span class="popuptext" id="nombre">Ingrese el nombre del comité. Solo se permiten 30 caracteres!</span>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-4 control-label">Responsable del comité(*):</label>
-                            <div class="col-sm-5">
-                                <select class="form-control" th:field="*{codigoempleado.codigoempleado}" >
-                                     <option value=""> Selecione un encargado del comité</option>
-                                    <option th:each="c:${empleados}"  th:value="${c.codigoempleado}" th:text="${c.nombreempleado}+', '+${c.apellidoempleado}"></option>
-                                </select>
-                                <!--<input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>-->
-                            </div>
-                            <div class="popup col-sm-1"><b>
-                                    <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('encargadocmite')" onmouseout ="javascript:ocultarAyuda('encargadocmite')">a</a></b>
-
-                                <span class="popuptext" id="encargadocmite">Seleccione el encargado del Comité.!</span>
-                            </div>
-                        </div>
-
-
-                        <div class="form-group">
-                            <label class="col-sm-4 control-label ">Descripción del comité(*):</label>
-                            <div class="col-sm-7">
-                                <!--<input type="text" class="form-control"required="true" size="100" maxlength="100" placeholder="Escriba la Descripcion del comite" th:field="*{desripcioncomite}"/>-->
-                            
-                            <textarea rows="2" cols="50" class="form-control" size="100" maxlength="100" required="true" th:field="*{desripcioncomite}">
-
-                            </textarea>
+                        <form class="form-horizontal" onsubmit="return validateForm()" th:object="${comite}" th:action="@{../comite}" method="post">
+                            <input type="hidden" th:field="*{codigocomite}"/>
+                            <div class="form-group">
+                                <label class="col-sm-4 control-label">Nombre del comité(*):</label>
+                                <div class="col-sm-5">
+                                    <input type="text" class="form-control" size="30" maxlength="30" required="true"  th:field="*{nombrecomite}"/>
                                 </div>
-                             <div class="popup col-sm-1"><b>
-                                    <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('descripcionn')" onmouseout ="javascript:ocultarAyuda('descripcionn')">a</a></b>
+                                <div class="popup col-sm-1"><b>
+                                        <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('nombre')" onmouseout ="javascript:ocultarAyuda('nombre')">a</a></b>
 
-                                <span class="popuptext" id="descripcionn">Ingrese una descripcion al comité.!</span>
+                                    <span class="popuptext" id="nombre">Ingrese el nombre del comité. Solo se permiten 30 caracteres!</span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-4 control-label">Numero de acuerdo comité(*):</label>
-                            <div class="col-sm-2">
-                                <input type="text" class="form-control numeros" maxlength="5" required="true"   th:field="*{numeroacuerdocomite}"/>
-                            </div>
-                            <div class="popup col-sm-1"><b>
-                                    <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('acuerdo')" onmouseout ="javascript:ocultarAyuda('acuerdo')">a</a></b>
+                            <div class="form-group">
+                                <label class="col-sm-4 control-label">Responsable del comité(*):</label>
+                                <div class="col-sm-5">
+                                    <select class="form-control" th:field="*{codigoempleado.codigoempleado}" >
+                                        <option value=""> Selecione un encargado del comité</option>
+                                        <option th:each="c:${empleados}"  th:value="${c.codigoempleado}" th:text="${c.nombreempleado}+', '+${c.apellidoempleado}"></option>
+                                    </select>
+                                </div>
+                                <div class="popup col-sm-1"><b>
+                                        <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('encargadocmite')" onmouseout ="javascript:ocultarAyuda('encargadocmite')">a</a></b>
 
-                                <span class="popuptext" id="acuerdo">Ingrese el Numero de Acuerdo. Solo es permitido la combinacion de los dititos del 0 al 9.!</span>
+                                    <span class="popuptext" id="encargadocmite">Seleccione el encargado del Comité.!</span>
+                                </div>
                             </div>
-                        </div>
+                            <div class="form-group">
+                                <label class="col-sm-4 control-label ">Descripción del comité(*):</label>
+                                <div class="col-sm-7">
+                                    <!--<input type="text" class="form-control"required="true" size="100" maxlength="100" placeholder="Escriba la Descripcion del comite" th:field="*{desripcioncomite}"/>-->
 
+                                    <textarea rows="2" cols="50" class="form-control" size="100" maxlength="100" required="true" th:field="*{desripcioncomite}">
 
-                        <div class="form-group">
-                            <label class="col-sm-4 control-label">Miembros maximos del comité(*):</label>
-                            <div class="col-sm-2">
-                                <input type="text" class="form-control numeros" required="true" maxlength="3" minlength="1" th:field="*{miembromaximo}"/>
+                                    </textarea>
+                                </div>
+                                <div class="popup col-sm-1"><b>
+                                        <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('descripcionn')" onmouseout ="javascript:ocultarAyuda('descripcionn')">a</a></b>
+
+                                    <span class="popuptext" id="descripcionn">Ingrese una descripcion al comité.!</span>
+                                </div>
                             </div>
-                             <div class="popup col-sm-1"><b>
-                                    <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('miembros')" onmouseout ="javascript:ocultarAyuda('miembros')">a</a></b>
+                            <div class="form-group">
+                                <label class="col-sm-4 control-label">Numero de acuerdo comité(*):</label>
+                                <div class="col-sm-2">
+                                    <input type="text" class="form-control numeros" maxlength="5" required="true"   th:field="*{numeroacuerdocomite}"/>
+                                </div>
+                                <div class="popup col-sm-1"><b>
+                                        <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('acuerdo')" onmouseout ="javascript:ocultarAyuda('acuerdo')">a</a></b>
 
-                                <span class="popuptext" id="miembros">Ingrese el Numero de Acuerdo. Solo es permitido la combinacion de los dititos del 0 al 9.!</span>
+                                    <span class="popuptext" id="acuerdo">Ingrese el Numero de Acuerdo. Solo es permitido la combinacion de los dititos del 0 al 9.!</span>
+                                </div>
                             </div>
-                        </div>
+                            <div class="form-group">
+                                <label class="col-sm-4 control-label">Miembros maximos del comité(*):</label>
+                                <div class="col-sm-2">
+                                    <input type="text" class="form-control numeros" required="true" maxlength="3" minlength="1" th:field="*{miembromaximo}"/>
+                                </div>
+                                <div class="popup col-sm-1"><b>
+                                        <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('miembros')" onmouseout ="javascript:ocultarAyuda('miembros')">a</a></b>
+                                    <span class="popuptext" id="miembros">Ingrese el Numero de Acuerdo. Solo es permitido la combinacion de los dititos del 0 al 9.!</span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-4 control-label">Fecha inicio del comité(*):</label>
+                                <div class="col-sm-2">
+                                    <input type="text" class="form-control fecha_format" required="true" th:field="*{fechadesdecomite}" id="fechadesdecomite" onchange="isDat(this.value, 'fechadesdecomite'); Fechas(this.value, $('#fechahastacomite').val().toString(), 'fechadesdecomite', 'fechahastacomite')"/>
+                                </div>
+                                <div class="popup col-sm-1"><b>
+                                        <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('fechadesde')" onmouseout ="javascript:ocultarAyuda('fechadesde')">a</a></b>
 
-                        <div class="form-group">
-                            <label class="col-sm-4 control-label">Fecha inicio del comité(*):</label>
-                            <div class="col-sm-2">
-                                <input type="text" class="form-control fecha_format" required="true" th:field="*{fechadesdecomite}" id="fechadesdecomite" onchange="isDat(this.value,'fechadesdecomite');Fechas(this.value,$('#fechahastacomite').val().toString(),'fechadesdecomite','fechahastacomite')"/>
+                                    <span class="popuptext" id="fechadesde">Ingrese la Fecha de inicio del Comité. Haga un clic en la caja vacía.!</span>
+                                </div>
                             </div>
-                              <div class="popup col-sm-1"><b>
-                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('fechadesde')" onmouseout ="javascript:ocultarAyuda('fechadesde')">a</a></b>
-                        
-                        <span class="popuptext" id="fechadesde">Ingrese la Fecha de inicio del Comité. Haga un clic en la caja vacía.!</span>
+                            <div class="form-group">
+                                <label class="col-sm-4 control-label">Fecha fin del comité(*):</label>
+                                <div class="col-sm-2">
+                                    <input type="text" class="form-control fecha_format" required="true" th:field="*{fechahastacomite}" id="fechahastacomite" onchange="isDat(this.value, 'fechahastacomite'); Fechas($('#fechadesdecomite').val().toString(), this.value, 'fechadesdecomite', 'fechahastacomite')"/>
+                                </div>
+                                <div class="popup col-sm-1"><b>
+                                        <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('fechahasta')" onmouseout ="javascript:ocultarAyuda('fechahasta')">a</a></b>
+
+                                    <span class="popuptext" id="fechahasta">Ingrese la Fecha de finalizacion del comite. Haga un clic en la caja vacía.!</span>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-4 control-label">Fecha fin del comité(*):</label>
-                            <div class="col-sm-2">
-                                <input type="text" class="form-control fecha_format" required="true" th:field="*{fechahastacomite}" id="fechahastacomite" onchange="isDat(this.value,'fechahastacomite');Fechas($('#fechadesdecomite').val().toString(),this.value,'fechadesdecomite','fechahastacomite')"/>
-                            </div>
-                               <div class="popup col-sm-1"><b>
-                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('fechahasta')" onmouseout ="javascript:ocultarAyuda('fechahasta')">a</a></b>
-                        
-                        <span class="popuptext" id="fechahasta">Ingrese la Fecha de finalizacion del comite. Haga un clic en la caja vacía.!</span>
-                    </div>
-                        </div>
-                        </div>
 
-                        <div class="col-md-12">
-                            <div class="row" align="center">
-                                 <a href="#" th:href="@{/comites/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
-                                <button type="submit"  id="guardar"  class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
-                                <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
-                            </div>
+                    <div class="col-md-12">
+                        <div class="row" align="center">
+                            <a href="#" th:href="@{/comites/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
+                            <button type="submit"  id="guardar"  class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+                            <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
                         </div>
-                    </form>
+                    </div>
+
                 </div>
-
-
             </div>
         </div>
     </div>
@@ -137,13 +120,13 @@
         <th:block th:include="../templates/footer"></th:block>
     </div>  
 
-   
+
 
     <script th:inline="javascript">
         $(document).ready(function () {
-               $('#guardar').click(function(){
-                    $("#loader").addClass("loader");
-                    });
+        $('#guardar').click(function(){
+        $("#loader").addClass("loader");
+        });
         if ([[${msg}]] === 0){
         swal({
         title: "Exito!",
@@ -152,10 +135,10 @@
                 icon: "success"
         }).then(function() {
         location.href = '../comites/';
-           swal({
-       text: "Redirigiendo a consulta de comites",
-       icon: "success"
-    })
+        swal({
+        text: "Redirigiendo a consulta de comites",
+                icon: "success"
+        })
         });
         }
 
@@ -168,45 +151,37 @@
         });
         }
         });
-        
         $(document).ready(function () {
         $('#fechadesdecomite').datepicker({
-            dateFormat: 'dd/mm/yy'
+        dateFormat: 'dd/mm/yy'
         });
-
         $('#fechahastacomite').datepicker({
-            dateFormat: 'dd/mm/yy'
+        dateFormat: 'dd/mm/yy'
         });
-       
-    });
+        });
     </script> 
-<script>
-    Textheader('pnt_inac',document.title);
-                function Fechas(val1,val2,val3,val4){
-                        var foo=ValidarFecha(val1,val2,val3,val4).split(",");;
-                        if(foo[0]!=foo[2]){
-                            swal(foo[1], foo[0]);
-                        }
-                    }
-                    
-                    function isDat(val,id){
-                        var foo=ExisteFecha(val,id).split(",");;
-                        if(foo[0]!=foo[2]){
-                            swal(foo[1], foo[0]);
-                        }
-                    }
-    $(document).ready(function () {
+    <script>
+        Textheader('pnt_inac', document.title);
+        function Fechas(val1, val2, val3, val4){
+        var foo = ValidarFecha(val1, val2, val3, val4).split(","); ;
+        if (foo[0] != foo[2]){
+        swal(foo[1], foo[0]);
+        }
+        }
+        function isDat(val, id){
+        var foo = ExisteFecha(val, id).split(","); ;
+        if (foo[0] != foo[2]){
+        swal(foo[1], foo[0]);
+        }
+        }
+        $(document).ready(function () {
         $('#fechadesdecomite').datepicker({
-            dateFormat: 'dd/mm/yy'
+        dateFormat: 'dd/mm/yy'
         });
-
         $('#fechahastacomite').datepicker({
-            dateFormat: 'dd/mm/yy'
+        dateFormat: 'dd/mm/yy'
         });
-       
-    });
-</script>
-
-
+        });
+    </script>
 </body>	
 </html>
