--- a/src/main/resources/templates/fragments/descuento/descuentoshow.html
+++ b/src/main/resources/templates/fragments/descuento/descuentoshow.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-
         <title>Detalle de Descuento </title>
     <th:block th:include="../templates/header"></th:block>
-
-
-
 </head>
 <body>
     <div class="row">
@@ -14,10 +10,8 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <!--<h3 align="center">Detalle  del Comite</h3>-->
-            <div class="row text-center" >
-                <br>
-                        <img src="../../static/image/roles.png" width="75" th:src="@{/image/roles.png}"/>
+            <div class="row text-center">                <br>
+                <img src="../../static/image/roles.png" width="75" th:src="@{/image/roles.png}"/>
             </div>
             <div>
                 <br>
@@ -28,20 +22,18 @@
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${descuento.codigodescuento}">Codigo de comite</p></div>
                         </div>
-                          <div class="form-group">
+                        <div class="form-group">
                             <label class="col-sm-5 control-label">Nombre empleado:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${descuento.codigoempleado.nombreempleado}">Responsable</p>
+                                <p class="form-control-static" th:text="${descuento.codigoempleado.nombreempleado}+, +${descuento.codigoempleado.apellidoempleado}">Responsable</p>
                             </div>
                         </div>
-
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Nombre del descuento</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${descuento.nombredescuento}">Nombre de comite</p>
                             </div>
                         </div>
-                      
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Tipo banco:</label>
                             <div class="col-sm-7">
@@ -52,35 +44,23 @@
                             <label class="col-sm-5 control-label">Monto descuento:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${#numbers.formatDecimal(descuento.montodescuento, 0, 'COMMA', 2, 'POINT')}">Responsable Gasto</p>
-                                <!--<p class="form-control-static" th:text="${descuento.montodescuento}">Numero de Acuerdo</p>-->
                             </div>
                         </div>
-
-                        
-
-                    
-
- 
-                        
                     </div> 
-
-
                 </form> 
                 <div class="col-md-12">
                     <div class="row" align="center">
-                    <a href="#" th:href="@{/descuentos/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>    
+                        <a href="#" th:href="@{/descuentos/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>    
                     </div>
                 </div>
             </div>
         </div>
-        
     </div>
-<div class="col-md-12">
-            <th:block th:include="../templates/footer"></th:block>
-        </div>
-
+    <div class="col-md-12">
+        <th:block th:include="../templates/footer"></th:block>
+    </div>
 </body>
 <script>
-    Textheader('pnt_crco',document.title);
+    Textheader('pnt_crco', document.title);
 </script>
 </html>
