--- a/src/main/resources/templates/fragments/empleado/empleadoshow.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshow.html
@@ -366,7 +366,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                                            		<div class="panel panel-primary">
 														<div class="panel-heading">
 															<h3 class="panel-title"> 
-																Formacion academica   
+																Formación academica   
 																<a th:href="@{|../../formacionacademicas/new/${empleado.codigoempleado}|}" title="" class="btn-sm btn-success pull-right">
 																	<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-plus">Crear</span> 
 																</a>
@@ -382,7 +382,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 															<div class="col-md-12">
 
 															<!--</div>-->
-															<h3 align="center">Listado formacion academica</h3>
+															<h3 align="center">Listado formación academica</h3>
 															<table id="tablita2" class="table table-striped table-bordered" >
 															<thead>
 															<tr >
