--- a/src/main/resources/templates/fragments/comite/comiteshow.html
+++ b/src/main/resources/templates/fragments/comite/comiteshow.html
@@ -38,7 +38,7 @@
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Responsable del  comité:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.codigoempleado.nombreempleado}">Responsable</p>
+                                <p class="form-control-static" th:text="${comite.codigoempleado.nombreempleado}+', '+${comite.codigoempleado.nombreempleado}">Responsable</p>
                             </div>
                         </div>
                         <div class="form-group">
