--- a/src/main/resources/templates/fragments/descuento/descuentos.html
+++ b/src/main/resources/templates/fragments/descuento/descuentos.html
@@ -2,11 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
      <th:block th:include="../templates/header"></th:block>
-    <title>Consultar Descuentos</title>
+    <title>Listado de descuentos</title>
 </head>
 <body>
     <script> Textheader('pnt_desc',document.title);</script>
-    <div>
+    <div th:if="${not #lists.isEmpty(descuentos)}">
        <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
@@ -39,7 +39,7 @@
                 <td th:text="${descuento.nombredescuento}">Nombre</td>
                 <td th:text="${descuento.tipodescuento}">Descripcion</td>
                 <td th:text="${descuento.tipobanco}">Categoria</td>
-                <td th:text="${descuento.codigoempleado.nombreempleado}+, +${descuento.codigoempleado.apellidoempleado}">Descripcion Cat</td>
+                <td th:text="${descuento.codigoempleado.nombreempleado}+', '+${descuento.codigoempleado.nombreempleado}">Descripcion Cat</td>
                 <!--<td th:text="${descuento.montodescuento}">Descripcion Cat</td>-->
                 <td th:text="${#numbers.formatDecimal(descuento.montodescuento, 0, 'COMMA', 2, 'POINT')}">salarioactual</td>  
                 
