--- a/src/main/resources/templates/fragments/empleado/empleadoshowcons.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshowcons.html
@@ -302,7 +302,7 @@
                                         <div class="card-body"> 
                                             <div class="panel panel-primary">
                                                 <div class="panel-heading">
-                                                    <h3 class="panel-title">Formacion academica</h3>
+                                                    <h3 class="panel-title">Formación academica</h3>
                                                 </div>
                                                 <div class="panel-body">
                                                     <div class="row text-center">
