--- a/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
@@ -31,7 +31,7 @@
                 <div class="form-group">
                     <label class="col-sm-6 control-label">Empleado:</label>
                     <div class="col-sm-6">
-                        <p class="" th:text="${inasistencia.codigoempleado.nombreempleado}">Empleado</p>
+                        <p class="" th:text="${inasistencia.codigoempleado.nombreempleado}+', '+${inasistencia.codigoempleado.apellidoempleado}">Empleado</p>
                     </div>
                 </div>
                 <div class="form-group">
