--- a/src/main/resources/templates/fragments/dependiente/dependienteform.html
+++ b/src/main/resources/templates/fragments/dependiente/dependienteform.html
@@ -115,8 +115,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <!--th:field="*{parentesco}" >-->
                              <option value="0">--seleccione el parentesco del dependiente--</option>
                         <option value="Hijo">Hijo</option>
+                        <option value="Hermano">Hermano</option>
+                         <option value="Hijo">Papa</option>
+                         <option value="Hijo">sobrino</option>
                         <option value="Tio">Tio</option>
-                         <option value="Hermano">Hermano</option>
+                         
                     </select>
                 </div>
                 <div class="popup "><b>
