cambio de etiquetas

--- a/src/main/resources/templates/fragments/empleado/empleadoform.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoform.html
@@ -126,7 +126,7 @@
                  <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup4')" onmouseout ="javascript:ocultarAyuda('poppup4')">a</a></b>
                         
-                        <span class="popuptext" id="poppup4">Seleccione o digite la Fecha de Nacimiento del Empleado el formtado debe ser  dia/mes/año .!</span>
+                        <span class="popuptext" id="poppup4">Ingrese la Fecha de Nacimiento del Empleado el formato debe ser  dia/mes/año .!</span>
                     </div>
             </div>
                  <div class="form-group">
@@ -206,7 +206,7 @@
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup9')" onmouseout ="javascript:ocultarAyuda('poppup9')">a</a></b>
                         
-                        <span class="popuptext" id="poppup9">Seleccione el genero  del Empleado desplegando la lista.!</span>
+                        <span class="popuptext" id="poppup9">Seleccione el sexo del Empleado desplegando la lista.!</span>
                     </div>
             </div>
                  <div class="form-group">
@@ -223,23 +223,23 @@
                  <div class="form-group">
                     <label class="col-sm-3 control-label">Teléfono fijo del empleado(*):</label>
                     <div class="col-sm-2">
-                        <input type="text"  class="form-control num_telefono" required="true"    th:field="*{telefonofijoempleado} "/>
+                        <input type="text"  class="form-control num_telefono" required="true" maxlength="9"    th:field="*{telefonofijoempleado} "/>
                     </div>
                      <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup11')" onmouseout ="javascript:ocultarAyuda('poppup11')">a</a></b>
                         
-                        <span class="popuptext" id="poppup11">Ingrese el telefono fijo del Empleado solo se admitiran 9 caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup11">Ingrese el telefono fijo del Empleado solo se admitiran 9 digitos.!</span>
                     </div>
                 </div>
                  <div class="form-group">
                     <label class="col-sm-3 control-label">Teléfono móvil del empleado(*):</label>
                     <div class="col-sm-2">
-                        <input type="text"  class="form-control num_telefono" required="true"   th:field="*{telefonomovilempleado}  "/>
+                        <input type="text"  class="form-control num_telefono" required="true" maxlength="9"    th:field="*{telefonomovilempleado}  "/>
                     </div>
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup12')" onmouseout ="javascript:ocultarAyuda('poppup12')">a</a></b>
                         
-                        <span class="popuptext" id="poppup12">Ingrese el telefono movil del Empleado solo se admitiran 9 caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup12">Ingrese el telefono movil del Empleado solo se admitiran 9 digitos.!</span>
                     </div>
                 </div>
                 <div class="form-group">
@@ -296,7 +296,7 @@
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup16')" onmouseout ="javascript:ocultarAyuda('poppup16')">a</a></b>
                         
-                        <span class="popuptext" id="poppup16">Ingrese el DUI del empleado solo se admitiran 9 caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup16">Ingrese el DUI del empleado solo se admitiran 9 digitos.!</span>
                     </div>
                 </div>
                 
@@ -308,7 +308,7 @@
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup17')" onmouseout ="javascript:ocultarAyuda('poppup17')">a</a></b>
                         
-                        <span class="popuptext" id="poppup17">Ingrese el NIT del empleado solo se admitiran 14 caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup17">Ingrese el NIT del empleado solo se admitiran 14 digitos.!</span>
                     </div>
                 </div>
                 
@@ -320,7 +320,7 @@
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup18')" onmouseout ="javascript:ocultarAyuda('poppup18')">a</a></b>
                         
-                        <span class="popuptext" id="poppup18">Ingrese el ISSS del empleado solo se admitiran 9 caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup18">Ingrese el ISSS del empleado solo se admitiran 9 digitos.!</span>
                     </div>
                 </div>
                    <div class="form-group">
@@ -332,7 +332,7 @@
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup19')" onmouseout ="javascript:ocultarAyuda('poppup19')">a</a></b>
                         
-                        <span class="popuptext" id="poppup19">Seleccione o digite la Fecha de ingreso al sector publico del Empleado el formtado debe ser  dia/mes/año .!</span>
+                        <span class="popuptext" id="poppup19">Ingrese la Fecha de ingreso al sector publico del Empleado el formato debe ser  dia/mes/año .!</span>
                     </div>
             </div>
                    <div class="form-group">
@@ -343,7 +343,7 @@
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup20')" onmouseout ="javascript:ocultarAyuda('poppup20')">a</a></b>
                         
-                        <span class="popuptext" id="poppup20">Seleccione o digite la Fecha de ingreso al sector privado del Empleado el formtado debe ser  dia/mes/año .!</span>
+                        <span class="popuptext" id="poppup20">Ingrese la Fecha de ingreso al sector privado del Empleado el formato debe ser  dia/mes/año .!</span>
                     </div>
             </div>
                    <div class="form-group">
@@ -354,7 +354,7 @@
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup21')" onmouseout ="javascript:ocultarAyuda('poppup21')">a</a></b>
                         
-                        <span class="popuptext" id="poppup21">Seleccione o digite la Fecha de ingreso del Empleado al ministerio el formtado debe ser  dia/mes/año .!</span>
+                        <span class="popuptext" id="poppup21">Ingrese la Fecha de ingreso del Empleado al ministerio el formato debe ser  dia/mes/año .!</span>
                     </div>
             </div>
                 
@@ -396,12 +396,12 @@
                 <div class="form-group">
                     <label class="col-sm-3 control-label">NUP del empleado(*):</label>
                     <div class="col-sm-3">
-                        <input type="text" class="form-control num_nup" required="true"  th:field="*{numeroafiliacion}"  />
+                        <input type="text" class="form-control num_nup" required="true" maxlength="12"   th:field="*{numeroafiliacion}"  />
                     </div>
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup24')" onmouseout ="javascript:ocultarAyuda('poppup24')">a</a></b>
                         
-                        <span class="popuptext" id="poppup24">Ingrese el NUP del Empleado solo se admitiran 12 caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup24">Ingrese el NUP del Empleado solo se admitiran 12 digitos.!</span>
                     </div>
                 </div>
                 <div class="form-group">
@@ -440,7 +440,7 @@
                     <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup27')" onmouseout ="javascript:ocultarAyuda('poppup27')">a</a></b>
                         
-                        <span class="popuptext" id="poppup27">Ingrese el numero de cuenta bancaria del Empleado solo se admitiran 30 caracteres .!</span>
+                        <span class="popuptext" id="poppup27">Ingrese el numero de cuenta bancaria del Empleado solo se admitiran 30 digitos.!</span>
                     </div>
                 </div>
  <div class="form-group">
